syntax = "proto3";

package def.match.methods;

option java_package = "com.commelina.math24.play.match.proto";
option java_outer_classname = "RequestProtos";
option java_multiple_files = true;

enum REQUEST_OPCODE {
    // 加入匹配队列
    JOIN_MATCH_QUENE = 0;
    // 退出匹配队列
    EXIT_MATCH_QUENE = 1;

    // 加入临时房间
    JOIN_TEMPORARY_ROOM = 10;
}

enum MATCH_MODE {
    FAST = 0;
}